--- a/MailingList.Wpf/MailingList.Wpf.csproj
+++ b/MailingList.Wpf/MailingList.Wpf.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01EBD750-F365-4D5A-AF56-46B807A0BAD9}</ProjectGuid>
+    <ProjectGuid>{88C3FE61-3679-490E-8A26-BB871E228049}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WpfApp5</RootNamespace>
-    <AssemblyName>WpfApp5</AssemblyName>
+    <RootNamespace>MailingList.Wpf</RootNamespace>
+    <AssemblyName>MailingList.Wpf</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -94,7 +94,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Image1.png" />
+    <ProjectReference Include="..\MailingList.Lib\MailingList.Lib.csproj">
+      <Project>{43691d9a-7807-4d2a-9399-48bc69492464}</Project>
+      <Name>MailingList.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
