Mailing list GUI + classes

--- a/MailingList.Wpf/MailingList.Wpf.csproj
+++ b/MailingList.Wpf/MailingList.Wpf.csproj
@@ -99,5 +99,8 @@
       <Name>MailingList.Lib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
