--- a/MailingList.Wpf/MailingList.Wpf.csproj
+++ b/MailingList.Wpf/MailingList.Wpf.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="InputControl.Lib">
+      <HintPath>..\WpfApp5\bin\Debug\InputControl.Lib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
